--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
 version: "3"
 services:
+    nginx: 
+        image: nginx:stable-alpine
+        ports:
+            - "3000:80"
+        volumes:
+            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+
     node-app:
         build: .
-        ports:
-            - "3000:3000"
         environment:
             - PORT=3000
         depends_on:
@@ -18,6 +23,10 @@ services:
             - mongo-db:/data/db
         ports:
             - "27017:27017"
+    
+    redis:
+        image: redis
+        
 
 volumes:
     mongo-db:
