--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,6 +5,13 @@ services:
             - "80:80"
             
     node-app:
+        deploy:
+            replicas: 8
+            restart_policy:
+                condition: any
+            update_config:
+                parallelism: 2
+                delay: 15s
         build:
             context: .
             args:
@@ -15,7 +22,7 @@ services:
             - MONGO_PASSWORD=${MONGO_PASSWORD}
             - SESSION_SECRET=${SESSION_SECRET}
         command: node index.js
-        
+
     mongo:
         environment:
             - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
